[gd_scene load_steps=4 format=3 uid="uid://humenayfn7bx"]

[ext_resource type="Script" uid="uid://ntrvcxp73t7u" path="res://scripts/views/AccueilView.gd" id="1_p65rg"]
[ext_resource type="Texture2D" uid="uid://duau5nvw76sb4" path="res://artdleAsset/animated/animated_inspiration_12.png" id="2_gxb5b"]
[ext_resource type="AudioStream" uid="uid://2n3ak2uejqjr" path="res://artdleAsset/music/currency_click.mp3" id="3_f85xh"]

[node name="AccueilView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_p65rg")
inspiration_spritesheet = ExtResource("2_gxb5b")

[node name="Layout" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -200.0
offset_right = 150.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="ClickPowerLabel" type="Label" parent="Layout"]
layout_mode = 2
text = "Click Power: 1"

[node name="AutoclickSpeedLabel" type="Label" parent="Layout"]
layout_mode = 2
text = "Autoclick Speed: 0"

[node name="ClickButton" type="Button" parent="Layout"]
layout_mode = 2
size_flags_vertical = 3
text = "Click Me!"

[node name="UpgradeClickPowerButton" type="Button" parent="Layout"]
layout_mode = 2
text = "Upgrade Click Power (10 Gold)"

[node name="UpgradeAutoclickSpeedButton" type="Button" parent="Layout"]
layout_mode = 2
text = "Upgrade Autoclick Speed (50 Gold)"

[node name="LblPrestigeCount" type="Label" parent="Layout"]
layout_mode = 2
text = "Prestige : 0"

[node name="BtnPrestige" type="Button" parent="Layout"]
layout_mode = 2
text = "Prestige (1000 inspi)
"

[node name="LblPrestigeCost" type="Label" parent="Layout"]
layout_mode = 2
text = "0.1 inspi multiplier"
horizontal_alignment = 1

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_f85xh")
