extends Control

@onready var lbl_prestigeCount: Label = $Layout/LblPrestigeCount
@onready var lbl_prestigeCost: Label = $Layout/LblPrestigeCost
@onready var btn_prestige: Button = $Layout/BtnPrestige

#func _ready() -> void:
#	btn_prestige.pressed.connect(_on_btn_prestige_pressed)
	
#	update_ui()

#func _on_btn_prestige_pressed() -> void:
#	GameState.reset_prestige()
#	update_ui()

#func update_ui() -> void:
	
